--- a/index.html
+++ b/index.html
@@ -155,6 +155,35 @@
   </div>
 
 
+<h1 class="letras fw-bold text-center mt-4">NUESTRAS MARCAS</h1>
+  <div class="containercarousel">
+    <div class="cardcarousel">
+      <h3 class="titlecarousel"></h3>
+      <img src="./assets/img/ame.webp" class=" card-img p-0" alt="">
+    </div>
+    <div class="cardcarousel">
+      <h3 class="titlecarousel">Atenea</h3>
+      <img src="./assets/img/Atenea-removebg-preview.png" class="card-img p-0" alt="">
+    </div>
+    <div class="cardcarousel">
+      <h3 class="titlecarousel">Bioaquua</h3>
+      <img src="./assets/img/Miis.png" class="card-img p-0" alt="">
+    </div>
+    <div class="cardcarousel">
+      <h3 class="titlecarousel">Bioaquua</h3>
+      <img src="./assets/img/Milani-removebg-preview.png" class="card-img p-0" alt="">
+      
+    </div>
+    <div class="cardcarousel">
+      <h3 class="titlecarousel">Bioaquua</h3>
+      <img src="./assets/img/rubyrose.webp" class="card-img p-0" alt="">
+    
+   </div>
+  </div>
+
+
+
+
 
   <footer>
     <section class="pie">
