--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       <div class="navbar-nav">
                           <a class="nav-link" href="./productos.html">Productos</a>
                           <a class="nav-link" href="./src/views/carrito.html">Comprar</a>
-                          <a class="nav-link disabled" href="./src/views/formulario.html">Contactanos</a>
+                          <a class="nav-link" href="./src/views/formulario.html">Contactanos</a>
                           <a class="nav-link" href="./src/views/carrito.html">
                             <h1 class="position-absolute top-0 start-50"><i class="bi bi-bag-check"></i></h1>
                             <span id="sumaProductos" class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-secondary">
@@ -156,30 +156,28 @@
 
 
 <h1 class="letras fw-bold text-center mt-4">NUESTRAS MARCAS</h1>
-  <div class="containercarousel">
+<div class="container-fluid">
+  <div class="containercarousel container-fluid">
     <div class="cardcarousel">
       <h3 class="titlecarousel"></h3>
-      <img src="./assets/img/ame.webp" class=" card-img p-0" alt="">
+      <img src="./assets/img/Garnier-removebg-preview.png" class=" card-img " alt="">
     </div>
     <div class="cardcarousel">
-      <h3 class="titlecarousel">Atenea</h3>
-      <img src="./assets/img/Atenea-removebg-preview.png" class="card-img p-0" alt="">
+      <img src="./assets/img/Atenea-removebg-preview.png" class="card-img " alt="">
     </div>
     <div class="cardcarousel">
-      <h3 class="titlecarousel">Bioaquua</h3>
-      <img src="./assets/img/Miis.png" class="card-img p-0" alt="">
+      <img src="./assets/img/Febble-removebg-preview.png" class="card-img " alt="">
     </div>
     <div class="cardcarousel">
-      <h3 class="titlecarousel">Bioaquua</h3>
-      <img src="./assets/img/Milani-removebg-preview.png" class="card-img p-0" alt="">
+      <img src="./assets/img/Milani-removebg-preview.png" class="card-img " alt="">
       
     </div>
     <div class="cardcarousel">
-      <h3 class="titlecarousel">Bioaquua</h3>
-      <img src="./assets/img/rubyrose.webp" class="card-img p-0" alt="">
+      <img src="./assets/img/Bioaqua-removebg-preview.png" class="card-img " alt="">
     
    </div>
   </div>
+</div>
 
 
 
