--- a/productos.html
+++ b/productos.html
@@ -84,7 +84,7 @@
           <H3>Contacto: 3108016744</H3>
           <h3>Correo: vilu.makeup@makeup.com</h3>
           <h3>Owner: Luisa Ospina</h3>
-          <h3>GitHub: https://github.com/Luisa1710</h3>
+          <a href="https://github.com/Luisa1710">
         </section>
       <section>
         <img src="./assets/img/email.png" alt=""><br><br>
